Change config file handling. Move AutoupdaterApp into installer.

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -115,6 +115,14 @@ Press the OK button to open the window for setting the shortcut. Press the Cance
 
 You can set the shortcut any time by clicking the "Settings" icon (scroll) and selecting the "Set DMMGamePlayerFastLauncher shortcut" option.</value>
             </setting>
+            <setting name="ignoreFolders" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string>dotnet</string>
+                        <string>BepInEx/core</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
         </PriconneReTLInstaller.Properties.Settings>
         <PriconneReTLUpdater.Properties.Settings>
             <setting name="uninstallFiles" serializeAs="Xml">
