Add launcher setting insterface instead of simple combobox.

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -14,22 +14,6 @@
     </startup>
     <applicationSettings>
         <PriconneReTLInstaller.Properties.Settings>
-            <setting name="uninstallFiles" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-                        <string>BepInEx\core</string>
-                        <string>BepInEx\plugins</string>
-                        <string>BepInEx\Translation</string>
-                        <string>dotnet</string>
-                        <string>.doorstop_version</string>
-                        <string>doorstop_config.ini</string>
-                        <string>winhttp.dll</string>
-                        <string>changelog.txt</string>
-                        <string>Version.txt</string>
-                        <string>ReTL_Updater.lnk</string>
-                    </ArrayOfString>
-                </value>
-            </setting>
             <setting name="configFiles" serializeAs="Xml">
                 <value>
                     <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
@@ -114,14 +98,6 @@ If you have moved/removed/renamed the previously set shortcut, please re-set it.
 Press the OK button to open the window for setting the shortcut. Press the Cancel button to abort the operation. 
 
 You can set the shortcut any time by clicking the "Settings" icon (scroll) and selecting the "Set DMMGamePlayerFastLauncher shortcut" option.</value>
-            </setting>
-            <setting name="ignoreFolders" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-                        <string>dotnet</string>
-                        <string>BepInEx/core</string>
-                    </ArrayOfString>
-                </value>
             </setting>
         </PriconneReTLInstaller.Properties.Settings>
         <PriconneReTLUpdater.Properties.Settings>
@@ -271,7 +247,10 @@ See log for details.</value>
         <value />
       </setting>
       <setting name="LastKnownVersion" serializeAs="String">
-        <value>1.3.0.0</value>
+        <value>1.4.0.0</value>
+      </setting>
+      <setting name="selectedLauncher" serializeAs="String">
+        <value>0</value>
       </setting>
     </PriconneReTLInstaller.Properties.Settings>
   </userSettings>
