--- a/PriconneReTLInstaller/PriconneReTLInstaller.csproj
+++ b/PriconneReTLInstaller/PriconneReTLInstaller.csproj
@@ -197,6 +197,12 @@
     <Compile Include="FastLauncherForm.Designer.cs">
       <DependentUpon>FastLauncherForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AUSettingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AUSettingForm.Designer.cs">
+      <DependentUpon>AUSettingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="IEForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -221,8 +227,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Settings1.cs" />
     <EmbeddedResource Include="AUForm.resx">
       <DependentUpon>AUForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AUSettingForm.resx">
+      <DependentUpon>AUSettingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AutoUpdateForm.resx">
       <DependentUpon>AutoUpdateForm.cs</DependentUpon>
