Remove embedded autoupdater. Change Ui of launcher settings. Disallow adding config files to the ignore list that are ignored by default.

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -97,7 +97,7 @@ If you have moved/removed/renamed the previously set shortcut, please re-set it.
 
 Press the OK button to open the window for setting the shortcut. Press the Cancel button to abort the operation. 
 
-You can set the shortcut any time by clicking the "Settings" icon (scroll) and selecting the "Set DMMGamePlayerFastLauncher shortcut" option.</value>
+You can set the shortcut any time by clicking the "Settings" icon (scroll) and selecting the "Launcher Settings" option, or by clicking on the launcher's name below the "Launch Game" checkbox.</value>
             </setting>
         </PriconneReTLInstaller.Properties.Settings>
         <PriconneReTLUpdater.Properties.Settings>
