--- a/PriconneReTLInstaller/Properties/Settings.settings
+++ b/PriconneReTLInstaller/Properties/Settings.settings
@@ -102,7 +102,7 @@ If you have moved/removed/renamed the previously set shortcut, please re-set it.
 
 Press the OK button to open the window for setting the shortcut. Press the Cancel button to abort the operation. 
 
-You can set the shortcut any time by clicking the "Settings" icon (scroll) and selecting the "Set DMMGamePlayerFastLauncher shortcut" option.</Value>
+You can set the shortcut any time by clicking the "Settings" icon (scroll) and selecting the "Launcher Settings" option, or by clicking on the launcher's name below the "Launch Game" checkbox.</Value>
     </Setting>
     <Setting Name="selectedLauncher" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
