--- a/PriconneReTLInstaller/PriconneReTLInstaller.csproj
+++ b/PriconneReTLInstaller/PriconneReTLInstaller.csproj
@@ -493,11 +493,15 @@
     <Content Include="Resources\wiki\currentoperationtooltip.png" />
     <Content Include="Resources\wiki\ignoreui.png" />
     <Content Include="Resources\wiki\importexportui.png" />
+    <Content Include="Resources\wiki\install.png" />
     <Content Include="Resources\wiki\launchersettingsui.png" />
+    <Content Include="Resources\wiki\noupdate.png" />
     <Content Include="Resources\wiki\optionsdisabled.png" />
     <Content Include="Resources\wiki\optionsenabled.png" />
     <Content Include="Resources\wiki\overview.png" />
+    <Content Include="Resources\wiki\progress.png" />
     <Content Include="Resources\wiki\updatedisabled.png" />
+    <Content Include="Resources\wiki\updateenabled.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
