--- a/PriconneReTLInstaller/PriconneReTLInstaller.csproj
+++ b/PriconneReTLInstaller/PriconneReTLInstaller.csproj
@@ -494,6 +494,7 @@
     <Content Include="Resources\wiki\ignoreui.png" />
     <Content Include="Resources\wiki\importexportui.png" />
     <Content Include="Resources\wiki\install.png" />
+    <Content Include="Resources\wiki\launch.png" />
     <Content Include="Resources\wiki\launchersettingsui.png" />
     <Content Include="Resources\wiki\noupdate.png" />
     <Content Include="Resources\wiki\optionsdisabled.png" />
