Add wiki resource

--- a/PriconneReTLInstaller/PriconneReTLInstaller.csproj
+++ b/PriconneReTLInstaller/PriconneReTLInstaller.csproj
@@ -487,6 +487,7 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\wiki\14reinstall.png" />
     <Content Include="Resources\wiki\appwindow.png" />
     <Content Include="Resources\wiki\autoupdaterui.png" />
     <Content Include="Resources\wiki\currentoperation.png" />
