--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -94,9 +94,7 @@ In order to be able to launch the game via the DMMGamePlayerFastLauncher, you ne
 
 If you have moved/removed/renamed the previously set shortcut, please re-set it. 
 
-Press the OK button to open the window for setting the shortcut. Press the Cancel button to abort the operation. 
-
-You can set the shortcut any time by clicking the "Settings" icon (scroll) and selecting the "Launcher Settings" option, or by clicking on the launcher's name below the "Launch Game" checkbox.</value>
+You can set the shortcut in the Installer by clicking the "Settings" icon (scroll) and selecting the "Launcher Settings" option, or by clicking on the launcher's name below the "Launch Game" checkbox.</value>
             </setting>
         </PriconneReTLInstaller.Properties.Settings>
         <PriconneReTLUpdater.Properties.Settings>
@@ -250,6 +248,9 @@ See log for details.</value>
       </setting>
       <setting name="selectedLauncher" serializeAs="String">
         <value>0</value>
+      </setting>
+      <setting name="installerUpdateNotification" serializeAs="String">
+        <value>True</value>
       </setting>
     </PriconneReTLInstaller.Properties.Settings>
   </userSettings>
