Add user setting to store Show Log checkbox state. Added checking for update and show log checkbox state to settings import/export

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -131,6 +131,9 @@ You can set the shortcut in the Installer by clicking the "Settings" icon (scrol
       <setting name="checkForInstallerUpdates" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="showLogChecked" serializeAs="String">
+        <value>False</value>
+      </setting>
     </PriconneReTLInstaller.Properties.Settings>
   </userSettings>
 </configuration>
