Edit tooltip text when removing config / ignored files (removed interop)

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -59,7 +59,7 @@ Depending on the options selected, keeps or removes config/ignored/interop files
             </setting>
             <setting name="updateModeDescription" serializeAs="String">
                 <value>Updates the current translation patch installation by removing the the current version and installing the latest.
-Keeps user files, as well as config/ignored/interop files.</value>
+Keeps user files, as well as config/ignored files.</value>
             </setting>
             <setting name="disabledMode" serializeAs="String">
                 <value>Disabled</value>
