Show modloader version on UI and implement logic to check them and give visual feedback of them being outdated. Add seperate logfile for selfupdate. Bump version.

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -134,6 +134,15 @@ You can set the shortcut in the Installer by clicking the "Settings" icon (scrol
       <setting name="showLogChecked" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="modLoaderOutdatedTooltip" serializeAs="String">
+        <value>Your modloader version is outdated!
+Please try updating your TL patch installation!
+If it's still outdated after the update, please wait for a new modloader release!</value>
+      </setting>
+      <setting name="gameOutdatedTooltip" serializeAs="String">
+        <value>Your game version is lower than the modloader version!
+Please update your game!</value>
+      </setting>
     </PriconneReTLInstaller.Properties.Settings>
   </userSettings>
 </configuration>
