Add user setting to store DMM config file path. Set default path on first app start. Check path and add ability to change the path on every startup if config file is not found.

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -143,6 +143,9 @@ If it's still outdated after the update, please wait for a new modloader release
         <value>Your game version is lower than the modloader version!
 Please update your game!</value>
       </setting>
+      <setting name="DMMConfigPath" serializeAs="String">
+        <value />
+      </setting>
     </PriconneReTLInstaller.Properties.Settings>
   </userSettings>
 </configuration>
