Implement GitHub API token use for github related tasks. Implement form to manage API token.

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -146,6 +146,9 @@ Please update your game!</value>
       <setting name="DMMConfigPath" serializeAs="String">
         <value />
       </setting>
+      <setting name="GithubAPIKey" serializeAs="String">
+        <value />
+      </setting>
     </PriconneReTLInstaller.Properties.Settings>
   </userSettings>
 </configuration>
