--- a/PriconneReTLInstaller/Properties/Settings.settings
+++ b/PriconneReTLInstaller/Properties/Settings.settings
@@ -121,5 +121,8 @@ Please update your game!</Value>
     <Setting Name="DMMConfigPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="GithubAPIKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
